# rssfilter

./: .gitignore  COPYING  Cargo.toml  README.md  WASM_TESTING.md  flake.nix  package.json  pnpm-lock.yaml  wrangler.jsonc
.cargo/: config.toml
.devcontainer/: Dockerfile.devcontainer  devcontainer-lock.json  devcontainer.json  onCreateCommand.sh
.github/: dependabot.yml  renovate-config.json  renovate-config.json5
.github/workflows/: audit.yml  build-rust.yml  claude-code-review.yml  claude-dependency-review.yml  claude.yml  dependabot-auto-merge.yml  oidc.yml  pulumi.yml  renovate.yml
filter-rss-feed/: Cargo.toml
filter-rss-feed/src/: fake_http_client.rs  header_cf_cache_status.rs  header_rssfilter_cache_status.rs  http_client.rs  lib.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: api.rs  feed_url.rs  filters.rs  main.rs
lambda-rssfilter/: Cargo.toml
lambda-rssfilter/src/: extension.rs  filter.rs  main.rs  setup_tracing.rs
nix/: base.nix  checks.nix  devshell.nix  packages.nix  treefmt.nix  wasm-bindgen-cli.nix  wasm-bindgen-cli_0_2_114.nix  wasm-bindgen-cli_0_2_118.nix  wasm-bindgen-cli_0_2_121.nix
nix/wasm-bindgen-cli/: Cargo.toml
nix/wasm-bindgen-cli/src/: lib.rs
pulumi/: .gitignore  .npmrc  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
pulumi/core/: Pulumi.shared.yaml  Pulumi.yaml  index.ts  package.json
pulumi/src/: api-gateway.ts  build-rust-lambda.ts  build-upload.ts  config.ts  dns-tls.ts  index.ts  lambda.ts  oidc.ts  walk.ts
rssfilter/: Cargo.toml
rssfilter-cli/: Cargo.toml
rssfilter-cli/src/: main.rs  rssfilter.rs
rssfilter-core/: Cargo.toml
rssfilter-core/src/: lib.rs
rssfilter-telemetry/: Cargo.toml
rssfilter-telemetry/src/: formatting.rs  lib.rs  native.rs  wasm.rs
rssfilter/src/: main.rs
static/: index.html
test-utils/: Cargo.toml
test-utils/src/: feed.rs  lib.rs  test_request_builder.rs
utils/: worker-build.sh  worker-deploy.sh
workers-rssfilter/: Cargo.toml
workers-rssfilter/src/: filter.rs  http_status.rs  lib.rs
