[workspace]
members = [
  "filter-rss-feed",
  "frontend",
  "rssfilter-cli",
  "rssfilter-core",
  "rssfilter-telemetry",
  "test-utils",
  "workers-rssfilter",
]
# `frontend` is a browser-only (wasm32) Leptos app and does not build for the
# native host, so keep it out of the default set; build it explicitly with
# `--target wasm32-unknown-unknown -p frontend` (or via Trunk).
default-members = [
  "filter-rss-feed",
  "rssfilter-cli",
  "rssfilter-core",
  "rssfilter-telemetry",
  "test-utils",
  "workers-rssfilter",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.metadata.crane]
name = "rssfilter-workspace"

[profile.release]
lto = true
