[package]
name = "filter-rss-feed"
edition = "2021"

[dependencies]
async-trait = "=0.1.88"
bytes = "=1.10.1"
# Core dependencies used by both WASM and non-WASM
env_logger = "=0.11.8"
headers = "=0.4.1"
http = "=1.3.1"
log = "=0.4.27"
regex = "=1.11.1"
rss = "=2.0.12"
rssfilter-telemetry = { path = "../rssfilter-telemetry" }
thiserror = "=2.0.12"
tracing = "=0.1.41"
worker = { version = "=0.6.0", features = ["http"] }

# WASM-specific dependencies (minimal reqwest features)
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "=0.12.22", default-features = false, features = [
  "json",
] }
wasm-bindgen = "=0.2.100"

# Non-WASM dependencies (full reqwest features including compression and networking)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "=0.12.22", default-features = false, features = [
  "json",
  "http2",
  "rustls-tls-native-roots",
  "rustls-tls",
  "brotli",
  "gzip",
  "zstd",
  "deflate",
] }

[dev-dependencies]
ctor = "=0.4.2"
matches = "=0.1.10"
test-case = "=3.3.1"
test-utils = { path = "../test-utils" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.50"

# Non-WASM dev dependencies (test dependencies that don't work with WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
mockito = "=1.7.0"
tokio = { version = "=1.46.0", features = ["full"] }
