[package]
name = "filter-rss-feed"
edition = "2021"

[features]
testing = ["derive_builder"]

[dependencies]
async-trait = "=0.1.89"
bytes = "=1.10.1"
# Core dependencies used by both WASM and non-WASM
env_logger = "=0.11.8"
headers = "=0.4.1"
http = "=1.3.1"
log = "=0.4.28"
regex = "=1.12.2"
rss = "=2.0.12"
rssfilter-telemetry = { path = "../rssfilter-telemetry" }
thiserror = "=2.0.17"
tracing = "=0.1.41"
worker = { version = "=0.6.6", features = ["http"] }

derive_builder = { version = "=0.20.2", optional = true }

# WASM-specific dependencies (minimal reqwest features)
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "=0.12.24", default-features = false, features = [
  "json",
] }
wasm-bindgen = "=0.2.104"

# Non-WASM dependencies (full reqwest features including compression and networking)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "=0.12.24", default-features = false, features = [
  "json",
  "http2",
  "rustls-tls-native-roots",
  "rustls-tls",
  "brotli",
  "gzip",
  "zstd",
  "deflate",
] }

[dev-dependencies]
ctor = "=0.6.0"
derive_builder = "=0.20.2"
matches = "=0.1.10"
test-case = "=3.3.1"
test-utils = { path = "../test-utils" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.54"

# Non-WASM dev dependencies (test dependencies that don't work with WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
mockito = "=1.7.0"
tokio = { version = "=1.48.0", features = ["full"] }
