[package]
name = "filter-rss-feed"
edition = "2021"
version.workspace = true

[features]
testing = ["derive_builder"]

[dependencies]
async-trait = "=0.1.89"
bytes = "=1.11.1"
# Core dependencies used by both WASM and non-WASM
env_logger = "=0.11.10"
headers = "=0.4.1"
http = "=1.4.0"
log = "=0.4.29"
regex = "=1.12.3"
rss = "=2.0.12"
rssfilter-telemetry = { path = "../rssfilter-telemetry" }
thiserror = "=2.0.18"
tracing = "=0.1.44"
worker = { version = "=0.8.1", features = ["http"] }

derive_builder = { version = "=0.20.2", optional = true }

# WASM-specific dependencies (minimal reqwest features)
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "=0.13.2", default-features = false, features = [
  "json",
] }
wasm-bindgen = "=0.2.118"

# Non-WASM dependencies (full reqwest features including compression and networking)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "=0.13.2", default-features = false, features = [
  "json",
  "http2",
  "rustls",
  "brotli",
  "gzip",
  "zstd",
  "deflate",
] }

[dev-dependencies]
ctor = "=1.0.0"
derive_builder = "=0.20.2"
matches = "=0.1.10"
test-case = "=3.3.1"
test-utils = { path = "../test-utils" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.68"

# Non-WASM dev dependencies (test dependencies that don't work with WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
mockito = "=1.7.2"
tokio = { version = "=1.52.1", features = ["full"] }
