[package]
name = "frontend"
edition = "2021"
version.workspace = true

[dependencies]
console_error_panic_hook = "=0.1.7"
gloo-net = { version = "=0.6.0", default-features = false, features = ["http"] }
leptos = { version = "=0.8.19", features = ["csr"] }
leptos-use = "=0.16.3"
regex = "=1.12.3"
rssfilter-core = { path = "../rssfilter-core" }
serde_json = "=1.0.150"
urlencoding = "=2.1.3"
web-sys = { version = "=0.3.99", features = ["Location", "Window"] }
