[package]
name = "lambda-rssfilter"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
aws_lambda_events = "0.15.1"
filter-rss-feed = { path = "../filter-rss-feed" }
http = "1.1.0"
lambda-extension = "0.11.0"
lambda_runtime = "0.13.0"
log = "0.4.22"
once_cell = "1.20.2"
opentelemetry = "0.26.0"
opentelemetry-aws = { version = "0.14.0" }
opentelemetry-http = "0.26.0"
opentelemetry-otlp = "0.26.0"
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry-stdout = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
pin-project = "1.1.6"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = [
    "json",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["signal"] }
tower = "0.5.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.27.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1.5.0"
tokio = "1.40.0"
test-utils = { path = "../test-utils", features = ["test-utils"] }
test-case = "3.3.1"
matches = "0.1.10"
