[package]
name = "lambda-rssfilter"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
aws_lambda_events = "=0.16.0"
filter-rss-feed = { path = "../filter-rss-feed" }
http = "=1.2.0"
lambda-extension = "=0.11.0"
lambda_runtime = "=0.13.0"
log = "=0.4.26"
once_cell = "=1.20.3"
opentelemetry = "=0.27.1"
opentelemetry-aws = { version = "=0.15.0" }
opentelemetry-http = "=0.27.0"
opentelemetry-otlp = "=0.27.0"
opentelemetry-semantic-conventions = "=0.27.0"
opentelemetry-stdout = "=0.27.0"
opentelemetry_sdk = { version = "=0.27.1", features = ["rt-tokio"] }
pin-project = "=1.1.10"
regex = "=1.11.1"
reqwest = { version = "=0.12.12", features = [
    "json",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
thiserror = "=2.0.12"
tokio = { version = "=1.44.0", features = ["signal"] }
tower = "=0.5.2"
tracing = "=0.1.41"
tracing-opentelemetry = "=0.28.0"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "json"] }
urlencoding = "=2.1.3"

[dev-dependencies]
mockito = "=1.7.0"
test-utils = { path = "../test-utils", features = ["test-utils"] }
test-case = "=3.3.1"
matches = "=0.1.10"
