[package]
name = "lambda-rssfilter"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
aws_lambda_events = "=0.16.0"
filter-rss-feed = { path = "../filter-rss-feed" }
http = "=1.3.1"
lambda-extension = "=0.11.0"
lambda_runtime = "=0.13.0"
log = "=0.4.27"
once_cell = "=1.21.3"
opentelemetry = "=0.29.1"
opentelemetry-aws = { version = "=0.17.0" }
opentelemetry-http = "=0.29.0"
opentelemetry-otlp = { version = "=0.29.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "=0.29.0"
opentelemetry-stdout = "=0.29.0"
opentelemetry_sdk = { version = "=0.29.0", features = ["rt-tokio"] }
pin-project = "=1.1.10"
regex = "=1.11.1"
reqwest = { version = "=0.12.15",default-features = false, features = [
    "http2",
    "json",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
thiserror = "=2.0.12"
tokio = { version = "=1.45.0", features = ["signal"] }
tower = "=0.5.2"
tracing = "=0.1.41"
tracing-opentelemetry = "=0.30.0"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "json"] }
urlencoding = "=2.1.3"

[dev-dependencies]
mockito = "=1.7.0"
test-utils = { path = "../test-utils", features = ["test-utils"] }
test-case = "=3.3.1"
matches = "=0.1.10"
