[package]
name = "rssfilter-cli"
edition = "2021"
version.workspace = true

[[bin]]
name = "rssfilter"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "=0.11.10"
filter-rss-feed = { path = "../filter-rss-feed" }
log = "=0.4.29"
regex = "=1.12.3"
clap = { version = "=4.6.0", features = ["derive"] }
tokio = { version = "=1.50.0", features = ["full"] }
