[package]
name = "rssfilter-cli"
edition = "2021"
version.workspace = true

[[bin]]
name = "rssfilter"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "=0.11.11"
filter-rss-feed = { path = "../filter-rss-feed" }
log = "=0.4.33"
regex = "=1.13.1"
clap = { version = "=4.6.2", features = ["derive"] }
tokio = { version = "=1.52.4", features = ["full"] }
