[package]
name = "rssfilter-telemetry"
edition = "2024"

[dependencies]
opentelemetry = "=0.31.0"
opentelemetry_sdk = { version = "=0.31.0", features = ["logs"] }
opentelemetry-semantic-conventions = "=0.31.0"
opentelemetry-stdout = "=0.31.0"
thiserror = "=2.0.17"
tracing = "=0.1.41"
tracing-opentelemetry = { version = "=0.32.0", features = ["lazy_static"] }
tracing-subscriber = { version = "=0.3.20", features = [
  "ansi",
  "env-filter",
  "json",
] }
opentelemetry-resource-detectors = "=0.10.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opentelemetry-otlp = { version = "=0.31.0", features = ["http-proto"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { package = "getrandom", version = "=0.3.4", features = [
  "wasm_js",
] }
js-sys = "=0.3.82"
tracing-web = "=0.1.3"
wasm-bindgen = "=0.2.105"
web-time = "=1.1.0"

[dev-dependencies]
test-case = "=3.3.1"
serde_json = "=1.0.145"
temp-env = "=0.3.6"
