[package]
name = "rssfilter-telemetry"
edition = "2024"
version.workspace = true

[dependencies]
opentelemetry = "=0.32.0"
opentelemetry_sdk = { version = "=0.32.0", features = ["logs"] }
opentelemetry-semantic-conventions = "=0.32.0"
opentelemetry-stdout = "=0.32.0"
thiserror = "=2.0.18"
tracing = "=0.1.44"
tracing-opentelemetry = { git = "https://github.com/houseme/tracing-opentelemetry", rev = "44521fa43c79989cdfb5b7244d5f1afadef6dd7e", features = ["lazy_static"] }
tracing-subscriber = { version = "=0.3.23", features = [
  "ansi",
  "env-filter",
  "json",
] }
opentelemetry-resource-detectors = { git = "https://github.com/cijothomas/opentelemetry-rust-contrib", rev = "91d5d87c9acefcfc8dd7816054283b8ec0ea1402" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opentelemetry-otlp = { version = "=0.32.0", features = ["http-proto"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { package = "getrandom", version = "=0.4.2", features = [
  "wasm_js",
] }
# This is an indirect dependncy via `opentelemetry_sdk`. We need to specify it
# here to ensure that `wasm_js` feature is enabled.
getrandom_0_3 = { package = "getrandom", version = "=0.3.4", features = [
  "wasm_js",
] }
js-sys = "=0.3.98"
tracing-web = "=0.1.3"
wasm-bindgen = "=0.2.121"
web-time = "=1.1.0"

[dev-dependencies]
test-case = "=3.3.1"
serde_json = "=1.0.149"
temp-env = "=0.3.6"
