[package]
name = "workers-rssfilter"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "=1.10.1"
# Core dependencies used by both WASM and non-WASM
console_error_panic_hook = { version = "=0.1.7" }
filter-rss-feed = { path = "../filter-rss-feed" }
headers = "=0.4.1"
headers-accept = "=0.2.1"
http = "=1.3.1"
http-body = "=1.0.1"
http-body-util = { version = "=0.1.3", features = ["full"] }
log = "=0.4.28"
mime = "=0.3.17"
rssfilter-telemetry = { path = "../rssfilter-telemetry" }
pin-project = "=1.1.10"
regex = "=1.11.3"
reqwest = { version = "=0.12.23", default-features = false, features = [
  "json",
] }
thiserror = "=2.0.16"
tower = "=0.5.2"
tracing = "=0.1.41"
tracing-opentelemetry = { version = "=0.31.0", features = ["lazy_static"] }
url = "=2.5.7"
urlencoding = "=2.1.3"
web-time = "=1.1.0"
worker = { version = "=0.6.1", features = ["http"] }
worker-macros = { version = "=0.6.1", features = ["http"] }
opentelemetry-http = "=0.30.0"
uuid = { version = "=1.18.1", features = ["rng-getrandom", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { package = "getrandom", version = "=0.3.3", features = [
  "wasm_js",
] }
wasm-bindgen = "=0.2.101"

[dev-dependencies]
ctor = "=0.5.0"
matches = "=0.1.10"
test-case = "=3.3.1"
test-utils = { path = "../test-utils" }
url = "=2.5.7"
wasm-bindgen-test = "=0.3.51"
filter-rss-feed = { path = "../filter-rss-feed", features = ["testing"] }

# Non-WASM dev dependencies (mockito brings in tokio with networking features
# and these don't work in WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
mockito = "=1.7.0"
tokio = { version = "=1.47.1", features = ["macros", "rt"] }
